# corpus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
corpus-associate/: Cargo.toml
corpus-associate/src/: axes.rs  composer.rs  concept.rs  explain.rs  lib.rs  matcher.rs
corpus-cli/: Cargo.toml
corpus-cli/src/: main.rs
corpus-compose/: Cargo.toml
corpus-compose/src/: export.rs  harmony.rs  layout.rs  lib.rs  strategy.rs
corpus-compose/src/renderers/: audio.rs  document.rs  image.rs  manifest.rs  mixed.rs  mod.rs  timeline.rs
corpus-compose/tests/: collage.rs
corpus-db/: Cargo.toml
corpus-db/src/: lib.rs  models.rs  queries.rs  schema.rs
corpus-enrich/: Cargo.toml
corpus-enrich/src/: audio.rs  image.rs  lib.rs  pipeline.rs  text.rs  video.rs
corpus-generate/: Cargo.toml
corpus-generate/src/: audio_sequence.rs  lib.rs  moodboard.rs  project.rs
corpus-keyfinder/: Cargo.toml  build.rs  wrapper.cpp  wrapper.h
corpus-keyfinder/src/: lib.rs
corpus-ui/: Cargo.toml
corpus-ui/src/: api.rs  compose_api.rs  lib.rs  server.rs  ws.rs
corpus-ui/static/: app.js  graph.html  index.html  style.css
scripts/: build_neighbors.py  caption_images.py  concept_compose.py  embed_clap.py  embed_clip.py  embed_siglip_mlx.py  embed_siglip_text_mlx.py  embed_siglip_video_mlx.py  reembed_segments.py  segment_audio.py  segment_images.py  segment_text.py  segment_video.py  stem_awareness.py  topology_discover.py
