[package]
name = "corpus-associate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
corpus-db = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
