[package]
name = "corpus-compose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
corpus-db = { workspace = true }
corpus-associate = { workspace = true }
image = { workspace = true }
symphonia = { workspace = true }
hound = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
