[package]
name = "corpus-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
corpus-db = { workspace = true }
corpus-keyfinder = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
image = { workspace = true }
